# music-types

./: CHANGELOG.md  Cargo.toml  README.md  representation.md
src/: harmony.rs  lib.rs  pitch.rs  scale.rs
src/harmony/: interval.rs  pitch.rs  scale.rs
src/harmony/interval/: display.rs  parse.rs
src/harmony/pitch/: display.rs  parse.rs
src/harmony/scale/: parse.rs  standard_scales.rs
src/pitch/: display.rs  parse.rs
src/scale/: parse.rs  standard_scales.rs
