[package]
name = "music-types"
version = "0.2.0"
edition = "2024"
description = "Types representing objects from music theory"
repository = "https://github.com/max-kay/music-types"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["music", "musictheory", "pitch", "scale"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
smufl = { version = "0.2", optional = true }

[features]
default = ["smufl"]
